# dprk-cti-dashboard

./: .dockerignore  .env.example  .gitignore  DESIGN.md  DPRK_Cyber_Threat_Dashboard_설계서_v1.0.md  DPRK_Cyber_Threat_Dashboard_설계서_v2.0.md  README.md  conftest.py  docker-compose.smoke.yml  docker-compose.yml  package.json  pnpm-lock.yaml  pyproject.toml  renovate.json
services/api/: Dockerfile  README.md  pyproject.toml  pytest.ini
services/api/src/api/: config.py  db.py  deps.py  embedding_client.py  embedding_writer.py  main.py  rate_limit.py  tables.py  telemetry.py
services/api/src/api/auth/: __init__.py  audit.py  jwt_verifier.py  oidc_client.py  schemas.py  session.py
services/api/src/api/promote/: __init__.py  errors.py  repositories.py  service.py
services/api/src/api/read/: __init__.py  actor_reports.py  analytics_aggregator.py  correlation_aggregator.py  dashboard_aggregator.py  detail_aggregator.py  pagination.py  repositories.py  search_cache.py  search_fusion.py  search_service.py  similar_cache.py  similar_service.py
services/api/src/api/routers/: actors.py  alerts.py  analytics.py  analytics_correlation.py  auth.py  dashboard.py  export.py  incidents.py  ingest.py  meta.py  pact_states.py  reports.py  search.py  staging.py
services/api/src/api/schemas/: __init__.py  correlation.py  read.py  review.py
services/api/tests/: conftest.py
services/api/tests/contract/: test_openapi_snapshot.py  test_pact_producer.py  test_pact_search_provider_state.py  test_pact_states_prod_guard.py
services/api/tests/integration/: test_actor_reports_route.py  test_actors_route.py  test_analytics_route.py  test_auth_routes.py  test_correlation_route.py  test_dashboard_route.py  test_detail_routes.py  test_incidents_route.py  test_pact_state_fixtures.py  test_promote_real_pg.py  test_rate_limit_e2e.py  test_rbac_endpoints.py  test_read_real_pg.py  test_reports_route.py  test_review_embedding.py  test_review_route.py  test_search_hybrid_integration.py  test_search_hybrid_real_pg.py  test_search_route.py  test_similar_route.py  test_staging_routes.py
services/api/tests/perf/: conftest.py  test_correlation_p95.py
services/api/tests/unit/: test_actor_reports.py  test_analytics_aggregator.py  test_audit.py  test_auth_schemas.py  test_ci_resolve_job_exit_propagation.py  test_compose_image_digest_pin.py  test_config.py  test_correlation_aggregator.py  test_correlation_dto.py  test_correlation_methodology.py  test_correlation_migration_seed.py  test_correlation_warnings_and_router.py  test_cosign_compose_signed_images.py  test_cosign_gha_services_signed_images.py  test_cosign_signed_images.py  test_detail_aggregator.py  test_dockerfile_digest_pin.py  test_embedding_client.py  test_embedding_writer.py  test_gha_action_digest_pin.py  test_gha_services_image_digest_pin.py  test_jwt_verifier.py  test_pagination_helper.py  test_promote_repositories_sqlite.py  test_promote_service_sqlite.py  test_rate_limit.py  test_read_schemas.py  test_realm_export_template_no_plaintext.py  test_renovate_config.py  test_require_role.py  test_review_schemas.py  test_search_fusion.py  test_search_service.py  test_session.py  test_similar_service_and_cache.py  test_tables_docstring.py  test_telemetry.py
services/llm-proxy/: Dockerfile  README.md  pyproject.toml
services/llm-proxy/src/llm_proxy/: cache.py  config.py  dependencies.py  error_handlers.py  errors.py  log_schema.py  main.py  rate_limit.py  telemetry.py
services/llm-proxy/src/llm_proxy/providers/: base.py  mock.py  openai.py
services/llm-proxy/src/llm_proxy/routers/: embedding.py  provider.py
services/llm-proxy/tests/: conftest.py
services/llm-proxy/tests/integration/: conftest.py  test_embedding_route.py
services/llm-proxy/tests/unit/: test_cache.py  test_config.py  test_dockerfile_digest_pin.py  test_errors.py  test_log_schema.py  test_mock_provider.py  test_openai_provider.py  test_rate_limit.py  test_telemetry.py
services/worker/: Dockerfile  README.md  pyproject.toml
services/worker/src/worker/: main.py  telemetry.py
services/worker/src/worker/bootstrap/: __init__.py  __main__.py  aliases.py  audit.py  backfill.py  cli.py  embedding_client.py  embedding_writer.py  errors.py  loader.py  normalize.py  schemas.py  tables.py  upsert.py
services/worker/src/worker/data_quality/: __init__.py  __main__.py  cli.py  constants.py  results.py  runner.py
services/worker/src/worker/data_quality/expectations/: __init__.py  dedup_rate.py  feed_metrics.py  null_rate.py  referential_integrity.py  review_metrics.py  taxii_metrics.py  value_domain.py  year_range.py
services/worker/src/worker/data_quality/sinks/: db.py  (+3 more)
services/worker/src/worker/ingest/: __main__.py  audit.py  cli.py  config.py  feed_state.py  fetcher.py  flow.py  normalize.py  parser.py  runner.py  staging_writer.py  tag_preview.py
services/worker/tests/: conftest.py
services/worker/tests/fixtures/: bootstrap_sample.xlsx  bootstrap_sample.yaml
services/worker/tests/fixtures/rss/: broken.xml  sample_atom.xml  sample_rss.xml
services/worker/tests/integration/: test_backfill_cli.py  test_bootstrap_audit.py  test_bootstrap_cli.py  test_bootstrap_embedding.py  test_ingest_cli.py  test_ingest_runner.py  test_taxii_runner.py
services/worker/tests/unit/: test_aliases.py  test_audit.py  test_backfill.py  test_bootstrap_fixture_generator.py  test_cli_parser.py  test_dockerfile_digest_pin.py  test_dq_cli.py  test_dq_core.py  test_dq_expectations.py  test_dq_sinks.py  test_embedding_client.py  test_embedding_writer.py  test_errors.py  test_feed_metrics.py  test_ingest_audit.py  test_ingest_config.py  test_ingest_feed_state.py  test_ingest_fetcher.py  test_ingest_normalize.py  test_ingest_parser.py  test_ingest_staging_writer.py  test_ingest_tag_preview.py  test_loader.py  test_normalize.py  test_review_metrics.py  test_schemas.py  test_stix_parser.py  test_tables_docstring.py  test_tag_classifier.py  test_taxii_audit.py  test_taxii_config.py  test_taxii_fetcher.py  test_taxii_metrics.py  test_taxii_normalize.py  test_taxii_state.py  test_telemetry.py  test_upsert.py
(+334 files in other folders)
