[project]
name = "dprk-cti-api"
version = "0.1.0"
description = "FastAPI scaffold for DPRK CTI platform"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.14.0",
  "authlib>=1.4.0",
  "cachetools>=5.0",
  "fastapi>=0.115.0",
  "httpx>=0.27",
  "itsdangerous>=2.2",
  "psycopg[binary]>=3.2.3",
  "pydantic-settings>=2.6.1",
  "redis>=5",
  "sqlalchemy[asyncio]>=2.0.36",
  "uvicorn[standard]>=0.32.0",
  "opentelemetry-api>=1.27",
  "opentelemetry-sdk>=1.27",
  "opentelemetry-exporter-otlp-proto-grpc>=1.27",
  "opentelemetry-instrumentation-fastapi>=0.48b0",
  "opentelemetry-instrumentation-sqlalchemy>=0.48b0",
  "opentelemetry-instrumentation-httpx>=0.48b0",
  "slowapi>=0.1.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/api"]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5",
    "fakeredis>=2.23",
    "respx>=0.21",
    "freezegun>=1.5",
    "cryptography>=42",
    "aiosqlite>=0.20",
    # PR #11 Group I — Pact producer verifier harness. Only the
    # ``Verifier`` class is used and only when a consumer pact file
    # is present under ``contracts/pacts/`` (see
    # ``tests/contract/test_pact_producer.py``). Pinned to the 2.x
    # line: 2.3.x has the stable ``pact.Verifier`` surface; 3.x
    # rewired around ``pact_ffi`` whose Windows wheels are known to
    # fail DLL init under some locales. When the FE consumer lands
    # we can re-evaluate, but for baseline skip-with-ok the 2.x
    # Verifier shape is what the harness targets.
    "pact-python>=2.3,<3",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = ["-ra", "--strict-markers", "--strict-config", "--rootdir=services/api"]
filterwarnings = [
    "ignore::DeprecationWarning:authlib.*",
    "ignore::DeprecationWarning:fakeredis.*",
]

[tool.uv]
package = true
