[project]
name = "dprk-cti-llm-proxy"
version = "0.1.0"
description = "LLM proxy scaffold for DPRK CTI platform"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "httpx>=0.27.2",
  "pydantic-settings>=2.6.1",
  "redis>=5",
  "slowapi>=0.1.9",
  "uvicorn[standard]>=0.32.0",
  "opentelemetry-api>=1.27",
  "opentelemetry-sdk>=1.27",
  "opentelemetry-exporter-otlp-proto-grpc>=1.27",
  "opentelemetry-instrumentation-fastapi>=0.48b0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-asyncio>=0.24",
  "pytest-cov>=5",
  "fakeredis>=2.23",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/llm_proxy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = ["-ra", "--strict-markers", "--strict-config", "--rootdir=services/llm-proxy"]
filterwarnings = [
  "ignore::DeprecationWarning:fakeredis.*",
]

[tool.uv]
package = true
