[project]
name = "dprk-cti-worker"
version = "0.1.0"
description = "Prefect worker scaffold for DPRK CTI platform"
requires-python = ">=3.12"
dependencies = [
  "httpx>=0.27.2",
  "pydantic-settings>=2.6.1",
  "prefect>=2.20.0",
  "opentelemetry-api>=1.27",
  "opentelemetry-sdk>=1.27",
  "opentelemetry-exporter-otlp-proto-grpc>=1.27",
]

[project.scripts]
worker-main = "worker.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/worker"]

[tool.uv]
package = true
