[project]
name = "dprk-cti-worker"
version = "0.1.0"
description = "Prefect worker scaffold for DPRK CTI platform"
requires-python = ">=3.12"
dependencies = [
  "httpx>=0.27.2",
  "pydantic-settings>=2.6.1",
  "prefect>=2.20.0",
  "opentelemetry-api>=1.27",
  "opentelemetry-sdk>=1.27",
  "opentelemetry-exporter-otlp-proto-grpc>=1.27",
  # Bootstrap ETL (PR #5)
  "openpyxl>=3.1.5",
  "pyyaml>=6.0.2",
  "pydantic>=2.9",
  "sqlalchemy[asyncio]>=2.0.36",
  "psycopg[binary]>=3.2.3",
]

[project.scripts]
worker-main = "worker.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/worker"]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5",
    "aiosqlite>=0.20",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = ["-ra", "--strict-markers", "--strict-config"]

[tool.uv]
package = true
